@@ -37,6 +37,9 @@ installcheck-local:
 	test -f "$(bindir)/foo"
 	test -f "$(bindir)/foo-$(VERSION)"
 	: > $(top_srcdir)/../ok
+
+uninstall-hook:
+	rm -f $(DESTDIR)$(bindir)/foo-$(VERSION)
 END
 
 echo 1 > foo
@@ -63,7 +66,6 @@ grep 1 bin/foo-1.0
 grep 2 bin/foo-2.0
 grep 2 bin/foo
 
-
 # install-hook is an error.
 cat >>Makefile.am <<EOF
 install-hook:
@@ -73,3 +75,5 @@ EOF
 AUTOMAKE_fails
 grep install-data-hook stderr
 grep install-exec-hook stderr
+
+:
