@@ -1,5 +1,14 @@
 2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: fix spurious failure in 'insthook.test'
+	* tests/insthook.test (Makefile.am): Add a proper `uninstall-hook'
+	target to remove the symlink created by the `install-exec-hook'
+	target; this prevents "make distcheck" from failing spuriously.
+	Since we are at it, delete an extra blank line, and add a trailing
+	`:' command.
+
+2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	maintcheck: fix spurious failure
 	* lib/am/distdir.am: Use `$(infodir)', not `${infodir}', to avoid
 	complaints from the `sc_no_brace_variable_expansions' maintainer
